networking/external-access-static-port-based/ingress-service-portbased.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-without-sni
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: myoperator2.<Kubernetes cluster domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: kafka-0-internal
                port:
                  number: 9092
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-1-internal
                port:
                  number: 9092
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-2-internal
                port:
                  number: 9092
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: kafka-bootstrap
                port:
                  number: 9092
